tests/errors/syn.expected-decl.function-params.or
main :: () -> void {

};

test :: (x) -> void {
};
